dctrl2xml (0.8) unstable; urgency=low

  * NOT RELEASED YET
  * dctrl2xml:
    - Print dctrl2xml's version number if the --version option is given.

 -- Frank S. Thomas <fst@debian.org>  Wed, 19 Dec 2007 16:40:18 +0100

dctrl2xml (0.7) unstable; urgency=low

  * Initial upload to Debian. (closes: #456597)
  * dctrl2xml:
    - DebianControlParser.parse_package_string() has been very much simplified
      by using Deb822 from the debian_bundle.deb822 module. This requires a
      dependency on the python-debian package.
    - Do not parse the long description for upstream author or homepage. The
      Homepage field is a proper control field since dpkg 1.14.6 and the
      Author pseudo field in the long description is not widely used.
    - Added Breaks to the list of package relations.
    - Improved the parsing of the Description and Files fields.
    - Instead of reading entire files, read them line by line and dump the XML
      tree after an empty line occured. This improves dctrl2xml's performance
      and decreases it's memory usage.
  * doc/dctrl2xml.xml:
    - Added the DESCRIPTION section and updated the examples.
    - Removed &lt; and &gt; from email elements, because docbook2x-man adds
      those now itself.
  * debian/control:
    - Bumped Standards-Version from 3.7.2 to 3.7.3, no changes required.
    - Removed Homepage pseudo field from description, there is no homepage.
    - Added Vcs-{Git,Browser} fields to the source stanza.
    - Reworked the short description and enhanced the long description. Thanks
      to Justin B Rye <jbr@edlug.org.uk> for the review.
  * debian/rules: Do not ignore "make clean" errors.
  * Changed my email address to fst@debian.org.

 -- Frank S. Thomas <fst@debian.org>  Tue, 18 Dec 2007 21:22:44 +0100

dctrl2xml (0.6) unstable; urgency=low

  * scripts/dctrl2xml:
    - Now parses also debtags. Facets and tags are both elements and tags are
      always empty. Colons in tags are replaced with a hyphen.